--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,13 @@ body,
   font-family: "Source Sans Pro", sans-serif;
 }
 
+.sidebar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  height: 250vh;
+}
+
 .app {
   display: flex;
   position: relative;
